--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,84 @@
 
 /* Cyclos */
 
+.cyclo{
+  padding:2em;
+
+  h1 {
+   text-align:center;
+   padding-bottom: 1em;
+   font-size: 40px;
+   color: black;
+   font-family: $brandon-light;
+
+ }
+}
+
+.media {
+  display: flex;
+  background: #f9f9f9;
+  color: wh#ite;
+  h2 {
+  color: #bbb;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 22px;
+  margin: 0 0 16px;
+  text-transform: uppercase;
+  }
+  p{
+    color:#333333;
+  }
+}
+.media-body {
+  flex: 1 1 auto;
+  padding: 20px;
+}
+.media-body img {
+  width: 100%;
+}
+.media-aside {
+  flex: 0 0 250px;
+  padding: 30px;
+  align-self: stretch;
+  background: #F8F7F7;
+  color: $black;
+  border-left: 1px solid #f0efef;
+}
+.media-section {
+  margin: 40px auto;
+}
+.media-section:first-child {
+  margin-top: 0;
+}
+.media-section:last-child {
+  margin-bottom: 0;
+}
+
+.share-links {
+  display: flex;
+  align-items: center;
+  justify-content:space-around;
+}
+.share-link {
+  flex: 0 0 48%;
+  color: white;
+  font-size: 18px;
+  padding: 10px 0;
+  text-align: center;
+  border-radius: 2px;
+  cursor: pointer;
+  &:hover {
+    color: white;
+  }
+}
+
+.bg-twitter {
+  background: #00a3e1;
+}
+.bg-facebook {
+  background: #3b5998;
+}
 
 
 /* Cyclos */
